classDiagram
    %% ========== ENUMS ==========
    class ShiftType {
        <<enumeration>>
        MORNING
        AFTERNOON
        NIGHT
    }
    
    class ProductStatus {
        <<enumeration>>
        ACTIVE
        DISCONTINUED
        TEMPORARY_OUT
        PILOT
    }
    
    class Role {
        <<enumeration>>
        ADMIN
        SUPERVISOR
        OPERATOR
        WAREHOUSE_KEEPER
    }
    
    class TimesheetStatus {
        <<enumeration>>
        OPEN
        CLOSED
        ANOMALY
        CORRECTED
    }
    
    class SwapRequestStatus {
        <<enumeration>>
        PENDING
        APPROVED
        REJECTED
        CANCELLED
    }
    
    %% ========== ENTIDADES PRINCIPALES ==========
    
    class User {
        -Long id
        -String employeeNumber
        -String name
        -String surname
        -String email
        -String password
        -String jobPosition
        -Role role
        -boolean active
        -boolean blocked
        -boolean expired
        -LocalDate registrationDate
        -LocalDateTime createdAt
        -LocalDateTime updatedAt
        +getFullName() String
        +hasWorkshiftToday() boolean
        +getTodayWorkshift() Workshift
        +getTotalScannedPalets() int
        +isAccountNonExpired() boolean
        +isEnabled() boolean
    }
    
    class Product {
        -Long id
        -String ean
        -String name
        -String brand
        -String description
        -BigDecimal weight
        -String weightUnit
        -String formatCode
        -Integer boxesPerPalet
        -Integer stackingLimit
        -String manufacturedIn
        -ProductStatus status
        -LocalDateTime createdAt
        -LocalDateTime updatedAt
        +isAvailable() boolean
        +getTotalPaletWeight() BigDecimal
        +getFullName() String
    }
    
    class Shift {
        -Long id
        -ShiftType shiftType
        -LocalTime startTime
        -LocalTime endTime
        -String description
        -boolean active
        -LocalDateTime createdAt
        -LocalDateTime updatedAt
        +getDurationInHours() long
        +getDurationInMinutes() long
        +crossesMidnight() boolean
        +getShiftDescription() String
        +isTimeWithinShift(LocalTime) boolean
    }
    
    class Workshift {
        -Long id
        -LocalDate date
        -LocalDateTime createdAt
        -LocalDateTime updatedAt
        +getShiftType() ShiftType
        +getFullDescription() String
        +getTotalScannedPalets() int
        +getTotalTimesheets() int
        +isToday() boolean
        +isPast() boolean
        +isFuture() boolean
    }
    
    class Palet {
        -Long id
        -String sscc
        -String batchNumber
        -LocalDate packagingDate
        -LocalDate productUseByDate
        -LocalDateTime productionTime
        -LocalDateTime createdAt
        -LocalDateTime updatedAt
        +getShift() Shift
        +getWorkshiftDate() LocalDate
    }
    
    class Timesheet {
        -Long id
        -LocalDateTime checkInAt
        -LocalDateTime checkOutAt
        -String notes
        -TimesheetStatus status
        -LocalDateTime createdAt
        -LocalDateTime updatedAt
        +isOpen() boolean
        +isClosed() boolean
        +getWorkedHours() Long
        +getWorkedMinutes() Long
        +getWorkedDuration() String
        +isLate(int) boolean
        +getLateMinutes() long
        +isEarlyExit(int) boolean
        +hasOvertime(long) boolean
        +getOvertimeHours() long
        +checkOut() void
    }
    
    class WorkshiftSwapRequest {
        -Long id
        -String reason
        -SwapRequestStatus status
        -LocalDateTime reviewedAt
        -String reviewNotes
        -LocalDateTime createdAt
        -LocalDateTime updatedAt
        +isPending() boolean
        +isApproved() boolean
        +isRejected() boolean
        +isCancelled() boolean
        +approve(User, String) void
        +reject(User, String) void
        +cancel(User) void
        +getSummary() String
        +getHoursSinceCreation() long
        +isOverdue(int) boolean
    }
    
    %% ========== RELACIONES ==========
    
    %% User relationships
    User "1" -- "0..*" Workshift : assigns
    User "1" -- "0..*" Palet : scans
    User "1" -- "0..*" WorkshiftSwapRequest : requests
    User "1" -- "0..*" WorkshiftSwapRequest : reviews
    User --> Role : has
    
    %% Product relationships
    Product "1" -- "0..*" Palet : contains
    Product --> ProductStatus : has
    
    %% Shift relationships
    Shift "1" -- "0..*" Workshift : defines
    Shift --> ShiftType : has
    
    %% Workshift relationships
    Workshift "1" -- "0..*" Timesheet : tracks
    Workshift "1" -- "0..*" Palet : produced in
    Workshift "1" -- "0..*" WorkshiftSwapRequest : current
    Workshift "1" -- "0..*" WorkshiftSwapRequest : requested
    
    %% Timesheet relationships
    Timesheet --> TimesheetStatus : has
    
    %% WorkshiftSwapRequest relationships
    WorkshiftSwapRequest --> SwapRequestStatus : has